# stayvia

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  CONTEXT.md  DEPLOY.md  HotelDesk_PRD.docx  HotelDesk_TRD.docx  LOCAL-DEV.md  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  eslint.config.js  hoteldesk.ps1  package-lock.json  package.json  playwright-app.config.ts  playwright.config.ts  stayvia.ps1  vercel.json
apps/api/: .env.development.example  .env.production.example  Dockerfile  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: index.ts
apps/marketing/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/: .env.development.example  .env.production.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: db_manager.rs  lib.rs  sidecar.rs
deploy/: README.md  deploy.sh  docker-compose.prod.yml  ecosystem.config.cjs  nginx.conf.sample  status.sh
deploy/nginx/: api.sldt.infynarc.com.conf  api.stayvia.example.conf  sldt.infynarc.com.conf  stayvia.example.conf
docs/: PHASE2-DESIGN.md  PHASE2-TENANCY-AUDIT.md
e2e/: billing.spec.ts  global-setup.ts  global-teardown.ts  harness.ts  isolation.spec.ts  seed.ts  session.ts  smoke.spec.ts
e2e-app/: app.spec.ts  global-setup.ts  global-teardown.ts
e2e/fixtures/: index.ts
supabase/: config.toml
(+317 files in other folders)
